[metadata]
name = tofutd
version = 0.0.1
description = A tower defence game featuring our cat, Tofu.
long_description = A tower defence game featuring our cat, Tofu.
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tofutd.assets.graphics = *.png
tofutd.assets.audio = *.wav, *.ogg
tofutd.assets.levels = *.json

[options.entry_points]
# Console script runs the main() function in the __main__ file.
console_scripts =
    tofutd = tofutd.__main__:main